--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "Open Collector",
   "version": "1.0.0",
-  "description": "OpenShift Sample Application",
+  "description": "Open Collector v.1.0.0",
   "keywords": [
     "OpenShift",
     "Node.js",
