change application name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Open Collector",
+  "name": "collector",
   "version": "1.0.0",
   "description": "Open Collector v.1.0.0",
   "keywords": [
